<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment 1</string>
    <string name="action_settings">Settings</string>
    <string name="Tab_Name1">UI Tab</string>
    <string name="Tab_Name2">Internet Tab</string>
    <string name="Stat1">Stamina</string>
    <string name="Stat2">Strength</string>
    <string name="Stat3">Agility</string>
    <string name="Stat4">Intellect</string>
    <string name="Overall">Overall</string>
    <string name="Percent">100%</string>
    <string name="Internet">www.hig.no</string>
    <string name="Randomize">Randomize</string>
    <string name="Swap_View">Swap Tab</string>
    <string name="Load">Load</string>
    <string name="Clicks">Clicks: ?</string>
    <string name="Lowest">Lowest: ?</string>
    <string name="Highest">Highest: ?</string>
    <string name="Record">New record detected!</string>
    <string name="Web_Title">Webpage title:</string>
    <string name="Web_Text">Content</string>
    <string name="Stats_Clear">Clear Stats</string>
    
</resources>
