<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InternetActivity" >
    
    <TextView
        android:id="@+id/txt_ProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txt_TabName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_ProjectName"
        android:layout_centerHorizontal="true"
        android:text="@string/Tab_Name2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_SwapView"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onSwapToUi"
        android:text="@string/Swap_View" />

    <Button
        android:id="@+id/btn_Load"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onLoad"
        android:text="@string/Load" />

    <EditText
        android:id="@+id/txt_InputHtml"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_Load"
        android:layout_below="@+id/txt_TabName2"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/Internet"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_WebTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_InputHtml"
        android:layout_below="@id/txt_InputHtml"
        android:layout_marginTop="14dp"
        android:text="@string/Web_Title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_WebContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_WebTitle"
        android:layout_below="@+id/txt_WebTitle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    
</RelativeLayout>
