<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txt_ProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txt_TabName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_ProjectName"
        android:layout_centerHorizontal="true"
        android:text="@string/Tab_Name1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />
    
    
    
    <Button
        android:id="@+id/btn_SwapView"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onSwapToInternet"
        android:text="@string/Swap_View" />

    <Button
        android:id="@+id/btn_Randomize"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onRandomize"
        android:text="@string/Randomize" />

    
    
    <ImageView
        android:id="@+id/img_BarGray5"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/btn_SwapView"
        android:layout_alignRight="@id/btn_SwapView"
        android:layout_marginBottom="86dp"
        android:scaleType="fitXY"
        android:src="@drawable/bar_gray" />

    <ImageView
        android:id="@+id/img_BarGray4"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray5"
        android:layout_alignRight="@id/img_BarGray5"
        android:layout_marginBottom="49dp"
        android:scaleType="fitXY"
        android:src="@drawable/bar_gray" />
    
    <ImageView
        android:id="@+id/img_BarGray3"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray4"
        android:layout_alignRight="@id/img_BarGray4"
        android:layout_marginBottom="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/bar_gray" />
    
    <ImageView
        android:id="@+id/img_BarGray2"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray3"
        android:layout_alignRight="@id/img_BarGray3"
        android:layout_marginBottom="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/bar_gray" />

    <ImageView
        android:id="@+id/img_BarGray1"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray2"
        android:layout_alignRight="@id/img_BarGray2"
        android:layout_marginBottom="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/bar_gray" />

    
    
    <ImageView
        android:id="@+id/img_BarStat1"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray1"
        android:layout_alignLeft="@id/img_BarGray1"
        android:scaleType="fitXY"
        android:src="@drawable/bar_green" />

    <ImageView
        android:id="@+id/img_BarStat2"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray2"
        android:layout_alignLeft="@id/img_BarGray2"
        android:scaleType="fitXY"
        android:src="@drawable/bar_green" />

    <ImageView
        android:id="@+id/img_BarStat3"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray3"
        android:layout_alignLeft="@id/img_BarGray3"
        android:scaleType="fitXY"
        android:src="@drawable/bar_green" />

    <ImageView
        android:id="@+id/img_BarStat4"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray4"
        android:layout_alignLeft="@id/img_BarGray4"
        android:scaleType="fitXY"
        android:src="@drawable/bar_green" />
    
    <ImageView
        android:id="@+id/img_BarOverall"
        android:layout_width="160dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/img_BarGray5"
        android:layout_alignLeft="@id/img_BarGray5"
        android:scaleType="fitXY"
        android:src="@drawable/bar_green" />
    
    
    
    <TextView
        android:id="@+id/txt_Stat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/img_BarGray1"
        android:layout_alignLeft="@id/btn_Randomize"
        android:text="@string/Stat1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/txt_Stat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/img_BarGray2"
        android:layout_alignLeft="@id/btn_Randomize"
        android:text="@string/Stat3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Stat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/img_BarGray3"
        android:layout_alignLeft="@id/btn_Randomize"
        android:text="@string/Stat2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/txt_Stat4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/img_BarGray4"
        android:layout_alignLeft="@id/btn_Randomize"
        android:text="@string/Stat4"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/img_BarGray5"
        android:layout_alignLeft="@id/btn_Randomize"
        android:text="@string/Overall"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    
    
    <TextView
        android:id="@+id/txt_Lowest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_Stat1"
        android:layout_alignLeft="@id/txt_Stat1"
        android:layout_marginBottom="90dp"
        android:text="@string/Lowest"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Highest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_Lowest"
        android:layout_alignLeft="@id/txt_Lowest"
        android:layout_marginBottom="6dp"
        android:text="@string/Highest"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txt_Highest"
        android:layout_alignLeft="@id/txt_Highest"
        android:layout_marginBottom="6dp"
        android:text="@string/Clicks"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_Lowest"
        android:layout_alignBottom="@id/txt_Lowest"
        android:layout_marginBottom="-24dp"
        android:text="@string/Record"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_OverallPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_BarGray5"
        android:layout_toLeftOf="@+id/txt_TabName1"
        android:text="@string/Percent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Stat4Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_BarGray4"
        android:layout_toLeftOf="@+id/txt_TabName1"
        android:text="@string/Percent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Stat3Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_BarGray3"
        android:layout_toLeftOf="@+id/txt_TabName1"
        android:text="@string/Percent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Stat2Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_BarGray2"
        android:layout_toLeftOf="@+id/txt_TabName1"
        android:text="@string/Percent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_Stat1Percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_BarGray1"
        android:layout_toLeftOf="@+id/txt_TabName1"
        android:text="@string/Percent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_StatsClear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/txt_Highest"
        android:layout_alignRight="@+id/img_BarGray1"
        android:onClick="onClearStats"
        android:text="@string/Stats_Clear" />

</RelativeLayout>